--- a/templates/chat/initiative-roll.hbs
+++ b/templates/chat/initiative-roll.hbs
@@ -3,11 +3,26 @@
     <i class="fa-solid fa-bolt"></i> {{name}} rolls for Initiative
   </div>
   <div class="chat-card__initiative">
+    <div class="chat-card__initiative-formula formula-toggle">
+      <span class="roll-formula">{{formula}}</span>
+      <i class="fas fa-chevron-down formula-toggle-icon"></i>
+    </div>
+    <div class="chat-card__roll-details" style="display: none;">
+      {{#each roll.terms as |term|}}
+        {{#if term.results}}
+          <div class="roll-term">
+            <span class="roll-term-formula">{{term.formula}}</span>
+            <div class="roll-term-results">
+              {{#each term.results as |result|}}
+                <span class="die-result {{#if result.discarded}}discarded{{/if}}">{{result.result}}</span>
+              {{/each}}
+            </div>
+          </div>
+        {{/if}}
+      {{/each}}
+    </div>
     <div class="chat-card__initiative-result">
       <span class="initiative-value">{{total}}</span>
-    </div>
-    <div class="chat-card__initiative-formula">
-      <span class="roll-formula">{{formula}}</span>
     </div>
   </div>
   {{#if description}}
