--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -7,8 +7,8 @@ $font-secondary: 'Roboto',
 sans-serif;
 $underdog: 'Underdog',
 serif;
-// $font-decorative: 'Protest Revolution',
-// sans-serif;
+$font-decorative: 'Protest Revolution',
+sans-serif;
 
 .protest-revolution-regular {
   font-family: "Protest Revolution", serif;
