--- a/templates/chat/roll-message.hbs
+++ b/templates/chat/roll-message.hbs
@@ -14,27 +14,8 @@
   {{#if savedMiss}}
     <div class="chat-card__header chat-card__header--saved-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SavedMiss"}}</div>
   {{/if}}
-  {{#if acCheck}}
-    <div class="chat-card__effects chat-card__effects--ac-check">
-      <div class="chat-card__effects--title">AC Check</div>
-      {{#each targetRollData as |target|}}
-        <div class="chat-card__effects--name flexrow"> {{this.name}}:
-          {{#each this.abilities as |ability key|}}
-            {{#ifCond target.compare ">=" ability.ac}}
-              <div class="chat-card__effects--hit flex-group-center">
-            {{/ifCond}}
-            {{#ifCond target.compare "<" ability.ac}}
-              <div class="chat-card__effects--miss flex-group-center">
-            {{/ifCond}}
-            {{ability.abbr}}
-             </div>
-          {{/each}}
-        </div>
-      {{/each}}
-    </div>
-  {{/if}}
   <div class="chat-card__initiative">
-    <div class="chat-card__initiative-formula formula-bg-{{pickedType}} formula-toggle">
+    <div class="chat-card__initiative-formula formula-toggle">
       <span class="roll-formula">{{roll.formula}}</span>
       <i class="fas fa-chevron-down formula-toggle-icon"></i>
     </div>
@@ -56,10 +37,29 @@
       <span class="initiative-value roll-value-{{pickedType}}">{{roll.total}}</span>
     </div>
   </div>
+  {{#if acCheck}}
+    <div class="chat-card__effects chat-card__effects--ac-check">
+      <div class="chat-card__effects--title">AC Check</div>
+      {{#each targetRollData as |target|}}
+        <div class="chat-card__effects--name flexrow"> {{this.name}}:
+          {{#each this.abilities as |ability key|}}
+            {{#ifCond target.compare ">=" ability.ac}}
+              <div class="chat-card__effects--hit flex-group-center">
+            {{/ifCond}}
+            {{#ifCond target.compare "<" ability.ac}}
+              <div class="chat-card__effects--miss flex-group-center">
+            {{/ifCond}}
+            {{ability.abbr}}
+             </div>
+          {{/each}}
+        </div>
+      {{/each}}
+    </div>
+  {{/if}}
   {{#if description}}
     <div class="chat-card__description">
       <div class="chat-card__description--header">{{actor.name}}. . . </div>
-      {{{description}}} 
+      {{{description}}}
     </div>
   {{/if}}
 </div>
